tests/samples/failing/04.mlang
{
    let secret 42;
};

// `secret` はスコープ外なので、ここでエラーになるべき
println (i32_to_string secret);
